feat: finish task crud
